# powdergame

./: .gitignore  CMakeLists.txt  CONFIG.txt  buildforlinux.sh  main.cpp  perlin.h  textloader.h  vcpkg.json
shad/: frag.glsl
src/: config.cpp  config.h  jpgfuncs.cpp  jpgfuncs.h  jpgglobals.cpp  jpgglobals.h  main.cpp  main.h  pginfo.h  utils.cpp  utils.h
src/materials/: material.cpp  material.h
tools/: fastbuild.bat  makefile.bat  run2.bat
